--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "author": "Shin Yuna",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.21.1",
     "graphql-yoga": "^1.18.3"
   },
   "scripts": {
